<resources>
    <string-array name="time_array">
        <item>11.00 – 13.00</item>
        <item>12.00 – 14.00</item>
        <item>13.00 – 15.00</item>
        <item>14.00 – 16.00</item>
        <item>15.00 – 17.00</item>
    </string-array>
    <string-array name="picture_array">
        <item>Сделать снимок</item>
        <item>Открыть галерею</item>
    </string-array>
    <string name="app_name">iCourier</string>
    <string name="in_work">В работе</string>
    <string name="completed">Завершенные</string>
    <string name="my_orders">Мои заказы</string>
    <string name="profile">Профиль</string>
    <string name="nothing" />
    <string name="orders_list_empty">У вас пока нет заказов</string>
    <string name="orders_list_not_finished">Вы еще не завершили ни одного заказа</string>
    <string name="do_new_order">Сделать первый заказ!</string>
    <string name="new_order">Новый заказ</string>
    <string name="im_executor">Я — исполнитель</string>
    <string name="courier">Пеший курьер</string>
    <string name="call_courier">ВЫЗВАТЬ КУРЬЕРА</string>
    <string name="furniture">Перевозка грузов</string>
    <string name="call_furniture">ЗАКАЗАТЬ ПЕРЕВОЗКУ</string>
    <string name="next">ДАЛЕЕ</string>
    <string name="sender">Отправитель</string>
    <string name="error_load_map">Произошла ошибка при загрузке карты</string>
    <string name="where_your_location">ОТКУДА ЗАБРАТЬ</string>
    <string name="where_from">Откуда?</string>
    <string name="date">Дата</string>
    <string name="time">Время</string>
    <string name="sender_upper">ОТПРАВИТЕЛЬ</string>
    <string name="who">Кто?</string>
    <string name="seven">+7</string>
    <string name="where_target_location">КУДА ОТВЕЗТИ</string>
    <string name="target_location">Куда?</string>
    <string name="who_target">Кому?</string>
    <string name="receiver_upper">ПОЛУЧАТЕЛЬ</string>
    <string name="receiver">Получатель</string>
    <string name="description_order">Детали заказа</string>
    <string name="that_take">ЧТО ОТВЕЗТИ</string>
    <string name="what">Что?</string>
    <string name="comment_for_order">Комментарий к заказу</string>
    <string name="price_upper">СТОИМОСТЬ</string>
    <string name="you_have_money">На вашем счету: </string>
    <string name="map">Карта</string>
    <string name="couriers">Курьеров 0</string>
    <string name="loading">ПОГРУЗКА</string>
    <string name="dimensions">Габариты, м</string>
    <string name="loaders">Грузчики</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="packaging">Упаковка</string>
    <string name="price">Стоимость</string>
    <string name="additionally">Дополнительно</string>
    <string name="additionally_upper">ДОПОЛНИТЕЛЬНО</string>
    <string name="uploading">Разгрузка</string>
    <string name="total_upper">ИТОГО</string>
    <string name="recharge">Пополнение баланса</string>
    <string name="your_balance">Ваш баланс:</string>
    <string name="recharge_text">Для оплаты сервисов пополните баланс</string>
    <string name="cashless_upper">БЕЗНАЛИЧНЫЙ РАСЧЕТ</string>
    <string name="card">Банковская карта</string>
    <string name="entity">По счету от юр. лица</string>
    <string name="promo_upper">ПРОМОКОД</string>
    <string name="write_promo">Ввести промокод</string>
    <string name="cash_upper">НАЛИЧНЫЕ</string>
    <string name="ill_buy">Я оплачу наличными</string>
    <string name="promo_text">Если у вас есть промокод, то введите его в поле ниже:</string>
    <string name="ready_upper">ГОТОВО</string>
    <string name="card_text">Введите сумму, на которую вы  хотите пополнить баланс:</string>
    <string name="sum">Сумма</string>
    <string name="detail_of_card">ДЕТАЛИ КАРТЫ</string>
    <string name="card_hint">0000 0000 0000 0000</string>
    <string name="name_and_last_name">Имя Фамилия</string>
    <string name="validity">Срок действия</string>
    <string name="cvv2">CVV2</string>
    <string name="tie_card">Привязать карту к счету</string>
    <string name="entity_text">Введите сумму, на которую вы хотите пополнить баланс (мин. 2500</string>
    <string name="company_name_upper">НАЗВАНИЕ КОМАНИИ</string>
    <string name="inn">ИНН</string>
    <string name="inn_hint">0000000000</string>
    <string name="bik">БИК</string>
    <string name="bik_hint">000000000</string>
    <string name="checking_account">РАСЧЕТНЫЙ СЧЕТ</string>
    <string name="checking_account_hint">000000000000000000</string>
    <string name="email_upper">EMAIL</string>
    <string name="email_hint">name@company.com</string>
    <string name="send_to_email">ОТПРАВИТЬ СЧЕТ НА EMAIL</string>
    <string name="entity_title">Выставить счет</string>
    <string name="promo">Промокод</string>
    <string name="ok">OK</string>
    <string name="order_success">Заказ успешно сформирован. Вы можете следить за ним в списке своих заказов.</string>
    <string name="ready">Готово</string>
    <string name="phone_text">Введите ваш номер телефона.\nНа него придет код подтверждения</string>
    <string name="get_code">ПОЛУЧИТЬ КОД</string>
    <string name="phone_confirm_text">Введите код подтверждения\nиз SMS в поле ниже</string>
    <string name="code_from_sms">Код из SMS</string>
    <string name="i_agree">Я согласен с</string>
    <string name="rule_of_service">Правилами сервиса</string>
    <string name="enter_upper">ВОЙТИ</string>
    <string name="need_auth_text">Если у вас нет аккаунта, то он будет создан автоматически</string>
    <string name="phone_confirm">Подтверждение номера</string>
    <string name="phone_num">Номер телефона</string>
    <string name="personal_data">Личные данные</string>
    <string name="passport_data">ПАСПОРТНЫЕ ДАННЫЕ</string>
    <string name="name">Имя</string>
    <string name="last_name">Фамилия</string>
    <string name="patronymic">Отчество</string>
    <string name="dob">Дата рождения</string>
    <string name="contacts_upper">КОНТАКТЫ</string>
    <string name="email">Email</string>
    <string name="balance_upper">БАЛАНС</string>
    <string name="my_profile">Мой профиль</string>
    <string name="write_questionnaire">Заполните анкету</string>
    <string name="write_personal_data">Укажите свои личные и\nпаспортные данные</string>
    <string name="wait_for_checking">Дождитесь проверки</string>
    <string name="checking_time">Обычно проверка занимает \n1–2 рабочих дня</string>
    <string name="start">Начать</string>
    <string name="start_work">Начните работу</string>
    <string name="find_and_doing_orders">Ищите и выполняйте заказы, \nзарабатывайте деньги и рейтинг</string>
    <string name="become_courier">СТАТЬ КУРЬЕРОМ</string>
    <string name="register">Регистрация</string>
    <string name="individual">Физическое лицо</string>
    <string name="entity_or_ip">Юр. лицо или ИП</string>
    <string name="shipping">Перевозка</string>
    <string name="shipping_text">Перевозка грузов</string>
    <string name="shipping_text_second">Вы также можете перевозить грузы. \nПросто укажите свой автомобиль.</string>
    <string name="add_car">Добавить автомобиль</string>
    <string name="company_upper">КОМПАНИЯ</string>
    <string name="company_name">Название компании</string>
    <string name="kpp">КПП</string>
    <string name="ogrn">ОГРН</string>
    <string name="director">Директор</string>
    <string name="director_upper">ДИРЕКТОР</string>
    <string name="continue_upper">ПРОДОЛЖИТЬ</string>
    <string name="take_picture_text">Сделайте фотографию или \nзагрузите изображение из библиотеки</string>
    <string name="passport">ПАСПОРТ</string>
    <string name="main_page_of_passport">Главная страница паспорта</string>
    <string name="page_with_address">Страница с адресом прописки</string>
    <string name="main_data">ОСНОВНЫЕ ДАННЫЕ</string>
    <string name="mark">Марка</string>
    <string name="model">Модель</string>
    <string name="number">Госномер</string>
    <string name="documents">ДОКУМЕНТЫ</string>
    <string name="rights">Права</string>
    <string name="sts">СТС авто</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="search">Поиск</string>
    <string name="take_order">Взять заказ</string>
    <string name="distance">Расстояние</string>
    <string name="price_two">Цена</string>
    <string name="where_take">ОТКУДА ЗАБРАТЬ</string>
    <string name="where_go">КУДА ОТВЕЗТИ</string>
    <string name="take_order_upper">ВЗЯТЬ ЗАКАЗ</string>
    <string name="choose_car">Выбор машины</string>
    <string name="take_order_with_the_car">ВЗЯТЬ ЗАКАЗ НА ЭТОЙ МАШИНЕ</string>
    <string name="confirm">Подтверждение</string>
    <string name="confirm_text">Принимая заказ, вы гарантируете его выполнение</string>
    <string name="agree">Принять</string>
    <string name="cancel">Отмена</string>
    <string name="courier_just">Курьер</string>
    <string name="ratings">РЕЙТИНГ</string>
    <string name="orders_upper">ЗАКАЗЫ</string>
    <string name="car_upper">АВТОМОБИЛЬ</string>
    <string name="exit">Выйти из проложения</string>
    <string name="balance">Баланс</string>
    <string name="pull_out">ВЫВЕСТИ СРЕДСТВА</string>
    <string name="push_to_balance">ПОПОЛНИТЬ БАЛАНС</string>
    <string name="transaction_text">Введите сумму перевода. \nИз нее будет вычтена \nкоммиссия (15\%%) и НДФЛ (13\%%)</string>
    <string name="sum_push">Сумма перевода</string>
    <string name="transaction">Перевод средств</string>
    <string name="name_upper">ИМЯ</string>
    <string name="write_name">Введите имя</string>
    <string name="last_name_upper">ФАМИЛИЯ</string>
    <string name="write_last_name">Введите фамилию</string>
    <string name="batya">ОТЧЕСТВО</string>
    <string name="write_batya">Введите отчество</string>
    <string name="dob_upper">ДАТА РОЖДЕНИЯ</string>
    <string name="write_dob">Введите дату рождения</string>
    <string name="card_num">НОМЕР КАРТЫ</string>
    <string name="to_getting">К ПОЛУЧЕНИЮ</string>
    <string name="get_out">Вывести</string>
    <string name="order_completed">ЗАКАЗ ВЫПОЛНЕН</string>
    <string name="connection_error">Призошла ошибка сети</string>
    <string name="error">Произошла ошибка. Повторите действие позже.</string>
    <string name="error_fields">Произошла ошибка. Проверьте правильность введенных полей.</string>
    <string name="client">Клиент</string>
    <string name="ages">Лет</string>
    <string name="download">Загрузка</string>
    <string name="attention">Внимание!</string>
    <string name="saving">Сохранение</string>
    <string name="zero">0</string>
    <string name="recharge_thousand">Пополнить на 1000</string>
    <string name="comment">Комментарий</string>
    <string name="size_upper">ГАБАРИТЫ ГРУЗА</string>
    <string name="length">Длина</string>
    <string name="width">Ширина</string>
    <string name="height">Высота</string>
    <string name="size">Габариты груза</string>
    <string name="enter_client">ЗАЙТИ КАК КЛИЕНТ</string>
    <string name="enter_courier">ЗАЙТИ КАК ИСПОЛНИТЕЛЬ</string>
    <string name="i_client">Я - Клиент</string>
    <string name="client_description">Вы можете размещать заказы на\n перевозку посылок или грузов
    </string>
    <string name="i_courier">Я - курьер или перевозчик</string>
    <string name="courier_description">Вы сможете искать заказы и\n выполнять их</string>
    <string name="another_price">Другая стоимость</string>
</resources>
