<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/preview_full_client"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:textSize="21sp"
            android:layout_marginTop="17dp"
            android:textColor="@color/frame_gray_light"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:text="@string/i_client"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:text="@string/client_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:id="@+id/authorize_client"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_white_turquoise_transparent_frame"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:layout_width="match_parent"
            android:layout_height="44dp">
            <TextView
                android:id="@+id/tvContinue_client"
                android:textColor="@color/turquoise"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/enter_client"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
    <View
        android:layout_marginRight="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:background="@color/divider_gray"
        android:layout_width="match_parent"
        android:layout_height="1dp" />
    <LinearLayout
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <ImageView
            android:src="@drawable/preview_full_courier"
            android:layout_marginTop="15dp"
            android:layout_width="100dp"
            android:layout_height="100dp" />
        <TextView
            android:textSize="21sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/frame_gray_light"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:text="@string/i_courier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:textSize="16sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/gray"
            android:fontFamily="sans-serif"
            android:gravity="center"
            android:text="@string/courier_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <FrameLayout
            android:id="@+id/authorize_courier"
            android:layout_marginTop="15dp"
            android:background="@drawable/selector_white_turquoise_transparent_frame"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="44dp"
            android:layout_width="match_parent"
            android:layout_height="44dp">
            <TextView
                android:id="@+id/tvContinue_courier"
                android:textColor="@color/turquoise"
                android:textSize="12sp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/enter_courier"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>
</LinearLayout>