<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textColor="@color/gray"
            android:textSize="14sp"
            android:layout_marginTop="74dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/phone_confirm_text"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <View
            android:background="@color/divider_gray_light"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <EditText
            android:id="@+id/phone_confirm_code"
            android:maxLength="4"
            android:inputType="number"
            android:textColorHint="@color/gray_hint"
            android:hint="@string/code_from_sms"
            android:textColor="@color/frame_gray_light"
            android:gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="@color/transparent"
            android:layout_width="match_parent"
            android:layout_height="44dp" />
        <View
            android:background="@color/divider_gray_light"
            android:layout_width="match_parent"
            android:layout_height="1dp" />
        <FrameLayout
            android:id="@+id/phone_confirm_action"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/selector_turquoise_dark_frame"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:visibility="gone">
            <ProgressBar android:id="@+id/pbConfirm"
                         android:indeterminateDrawable="@drawable/spinner_circle_white"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="7dp"
                         android:indeterminate="true"
                         android:visibility="gone"
                         android:layout_gravity="center"/>
            <TextView
                android:id="@+id/tvCode"
                android:textSize="12sp"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:text="@string/continue_upper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:text="@string/i_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:id="@+id/phone_confirm_rules"
                android:textColor="@color/turquoise"
                android:background="@drawable/selector_white_desert_white"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:text="@string/rule_of_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>